--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 
 /program/mall/img
 /program/mall/img_thumb
-/program/mall/config.php
+program/mall/config.php
 program/index/day.txt
 program/mall/update_task/day.txt
 program/mall/update_task/week.txt
