--- a/web/.gitignore
+++ b/web/.gitignore
@@ -6,3 +6,6 @@ public/uploads/type_icon/*
 public/uploads/type_index_icon/*
 public/uploads/goods_thumb/*
 public/uploads/order_icon/*
+public/uploads/goods/*
+public/uploads/order_img/*
+public/uploads/order/*
