企业认证后台修改

--- a/web/.gitignore
+++ b/web/.gitignore
@@ -9,3 +9,4 @@ public/uploads/order_icon/*
 public/uploads/goods/*
 public/uploads/order_img/*
 public/uploads/order/*
+public/uploads/company_cert/*
