商品添加修改

--- a/web/.gitignore
+++ b/web/.gitignore
@@ -10,3 +10,4 @@ public/uploads/goods/*
 public/uploads/order_img/*
 public/uploads/order/*
 public/uploads/company_cert/*
+public/uploads/goods_color/*
