修改后台会员模块

--- a/web/.gitignore
+++ b/web/.gitignore
@@ -12,3 +12,4 @@ public/uploads/order/*
 public/uploads/company_cert/*
 public/uploads/goods_color/*
 public/uploads/attached/*
+public/uploads/user_icon/*
